[package]
name = "pit-wall"
version = "0.4.3"
edition = "2021"
categories = ["development-tools"]
homepage = "https://github.com/alextes/pit-wall"
keywords = ["progress", "eta", "estimate"]
license = "MIT"
repository = "https://github.com/alextes/pit-wall"
description = "measure and report the progress of your program"

[dependencies]
humantime = "2.1.0"
tracing = "0.1.36"
